--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -10,7 +10,7 @@ jobs:
       max-parallel: 2
       matrix:
         operating-system: [ubuntu-latest]
-        php-images: [ 'openmage/php:7.3.20', 'openmage/php:7.4.4']
+        php-images: [ 'openmage/php:7.3.20' ]
         magento-version: [ '2.4.0' ]
         mysql-images: [ 'mysql:8']
 
@@ -43,7 +43,8 @@ jobs:
       - name: Install Magento
         uses: php-actions/composer@v2
         with:
-          command: composer create-project --repository-url=https://repo.magento.com/ magento/project-community-edition ./magento
+          command: create-project
+          only_args: --repository-url=https://repo.magento.com/ magento/project-community-edition ./magento
 
       - name: FS check
         run: |
