--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Configure composer auth
         uses: php-actions/composer@v2
         with:
-          - command config
+          - command: config
           - only_args: -a -g http-basic.repo.magento.com ${{ secrets.MAGENTO_USERNAME }} ${{ secrets.MAGENTO_PASSWORD }}
       - name: Install Magento
         uses: php-actions/composer@v2
