--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -44,7 +44,7 @@ jobs:
         uses: php-actions/composer@v2
         with:
           command: config
-          only_args: -a -g http-basic.repo.magento.com ${{ secrets.MAGENTO_USERNAME }} ${{ secrets.MAGENTO_PASSWORD }}
+          only_args: -a http-basic.repo.magento.com ${{ secrets.MAGENTO_USERNAME }} ${{ secrets.MAGENTO_PASSWORD }}
       - name: Install Magento
         uses: php-actions/composer@v2
         with:
