--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ matrix.magento-version }}
+          key: ${{ runner.os }}-composer-${{ matrix.magento-version }}-1
 
 
 
