--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -64,13 +64,21 @@ jobs:
           key: ${{ runner.os }}-composer-${{ matrix.magento-version }}-2
 
 
-      - name: Install Magento
+      - name: Install Magento Source
         uses: php-actions/composer@v2
         env:
           COMPOSER_AUTH: ${{ secrets.COMPOSER_AUTH }}
         with:
           command: install --ignore-platform-reqs --working-dir ./magento
 
+      - name: Install Database
+        uses: ${{ matrix.php-images }}
+        run: |
+          cd ./magento
+          php -v
+          php ./bin/magento setup:install --db-host=mysql --db-password=password \
+          --base-url=nginx /
+          --admin-firstname=Nia --admin-lastname=Admin --admin-email=example.com --admin-user=nia-admin --admin-password=nia-placeholder-password
       - name: FS check
         run: |
           ls -la
