--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -27,7 +27,7 @@ jobs:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       fpm:
-        image: ${{ matrix.php.fpm-imag }}
+        image: ${{ matrix.php.fpm-image }}
         ports:
           - 9000:9000
         volumes:
