--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -90,6 +90,8 @@ jobs:
         run: |
           cd ./magento
           php -v
+          php ./bin/magento --version
+          php ./bin/magento list
           php ./bin/magento setup:install --db-host mysql --db-password password \
           --base-url nginx /
           --admin-firstname Nia --admin-lastname Admin --admin-email example.com --admin-user nia-admin --admin-password nia-placeholder-password
