--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -13,8 +13,8 @@ jobs:
         php:
           - fpm-image: 'openmage/php:7.3.20'
             cli-setup: '7.3'
-          - fpm-image: 'openmage/php:7.3.20'
-            cli-setup: '7.3'
+#          - fpm-image: 'openmage/php:7.3.20'
+#            cli-setup: '7.3'
         magento-version: [ '2.4.0' ]
         mysql-images: [ 'mysql:8']
 
@@ -92,7 +92,7 @@ jobs:
           php -v
           php ./bin/magento --version
           php ./bin/magento list
-          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-placeholder-password
+          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password
       - name: FS check
         run: |
           ls -la
