--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   test-host:
     runs-on: ubuntu-latest
+    container: ubuntu:latest
     strategy:
       max-parallel: 2
       matrix:
