--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: password
         ports:
-          - 3306:3306
+          - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       fpm:
         image: ${{ matrix.php.fpm-image }}
@@ -93,7 +93,7 @@ jobs:
           php -v
           php ./bin/magento --version
           php ./bin/magento list
-          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password
+          ./bin/magento setup:install --db-host mysql:${{ job.services.mysql.ports['3306'] }} --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password
       - name: FS check
         run: |
           ls -la
