--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -24,6 +24,7 @@ jobs:
         image: ${{ matrix.mysql-images }}
         env:
           MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: magento2
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
