--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -27,7 +27,7 @@ jobs:
           MYSQL_DATABASE: magento2
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --default-authentication-plugin=mysql_native_password --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       fpm:
         image: ${{ matrix.php.fpm-image }}
         ports:
