--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -28,6 +28,10 @@ jobs:
         ports:
           - 3306:3306
         options: --default-authentication-plugin=mysql_native_password --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+      elastic:
+        image: 7.9.2
+        ports:
+          - 9200:9200
       fpm:
         image: ${{ matrix.php.fpm-image }}
         ports:
@@ -94,7 +98,7 @@ jobs:
           php -v
           php ./bin/magento --version
           php ./bin/magento list
-          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password
+          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password --search-engine=elasticsearch7 --elasticsearch-host=elastic --elasticsearch-port=9200
       - name: FS check
         run: |
           ls -la
