--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -22,12 +22,13 @@ jobs:
     services:
       mysql:
         image: ${{ matrix.mysql-images }}
+        command: mysqld --default-authentication-plugin=mysql_native_password
         env:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: magento2
         ports:
           - 3306:3306
-        options: --default-authentication-plugin=mysql_native_password --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       elastic:
         image: 7.9.2
         ports:
