--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -17,12 +17,12 @@ jobs:
 #          - fpm-image: 'openmage/php:7.3.20'
 #            cli-setup: '7.3'
         magento-version: [ '2.4.0' ]
-        mysql-images: [ 'mysql:8']
+        mysql-images: [ 'mysql:5.7']
+        # mysql:8 requires --default-authentication-plugin=mysql_native_password
 
     services:
       mysql:
         image: ${{ matrix.mysql-images }}
-        command: mysqld --default-authentication-plugin=mysql_native_password
         env:
           MYSQL_ROOT_PASSWORD: password
           MYSQL_DATABASE: magento2
