--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -30,7 +30,7 @@ jobs:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       elastic:
-        image: 7.9.2
+        image: elasticsearch:7.9.2
         ports:
           - 9200:9200
       fpm:
