--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -99,7 +99,7 @@ jobs:
           php -v
           php ./bin/magento --version
           php ./bin/magento list
-          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password --search-engine=elasticsearch7 --elasticsearch-host=elastic --elasticsearch-port=9200
+          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password --search-engine=elasticsearch7 --elasticsearch-host=elastic --elasticsearch-port=9200 --elasticsearch-username=elastic --elasticsearch-password=changeme
       - name: FS check
         run: |
           ls -la
