--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -69,6 +69,22 @@ jobs:
           cp m2-composer-templates/2.4.0-composer.lock magento/composer.lock
           ls -la
 
+      - name: Configure sysctl limits
+        run: |
+          sudo swapoff -a
+          sudo sysctl -w vm.swappiness=1
+          sudo sysctl -w fs.file-max=262144
+          sudo sysctl -w vm.max_map_count=262144
+
+      - uses: getong/elasticsearch-action@v1.2
+        with:
+          elasticsearch version: '7.6.1'
+          host port: 9200
+          container port: 9200
+          host node port: 9300
+          node port: 9300
+          discovery type: 'single-node'
+
       - name: Cache Composer Downloads
         uses: actions/cache@v1
         with:
@@ -95,7 +111,7 @@ jobs:
           command: install --ignore-platform-reqs --working-dir ./magento
       - name: elastic check
         run: |
-          docker logs "${{ job.services.elastic.id }}"
+#          docker logs "${{ job.services.elastic.id }}"
           curl elastic:9200
       - name: Install Database
         run: |
@@ -103,7 +119,7 @@ jobs:
           php -v
           php ./bin/magento --version
           php ./bin/magento list
-          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password --search-engine=elasticsearch7 --elasticsearch-host=elastic --elasticsearch-port=9200 --elasticsearch-username=elastic --elasticsearch-password=changeme
+          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password --search-engine=elasticsearch7 --elasticsearch-host=localhost --elasticsearch-port=9200 --elasticsearch-username=elastic --elasticsearch-password=changeme
       - name: FS check
         run: |
           ls -la
