--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -68,9 +68,9 @@ jobs:
           cp m2-composer-templates/2.4.0-composer.lock magento/composer.lock
           ls -la
           cat /etc/hosts
-          echo "127.0.0.1 elastic \n" > /etc/hosts
-          echo "127.0.0.1 mysql \n" > /etc/hosts
-          echo "127.0.0.1 nginx \n" > /etc/hosts
+          sudo echo "127.0.0.1 elastic \n" > /etc/hosts
+          sudo echo "127.0.0.1 mysql \n" > /etc/hosts
+          sudo echo "127.0.0.1 nginx \n" > /etc/hosts
           cat /etc/hosts
 
       - name: Configure sysctl limits
