--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -70,10 +70,10 @@ jobs:
 
       - name: Configure sysctl limits
         run: |
-          swapoff -a
-          sysctl -w vm.swappiness=1
-          sysctl -w fs.file-max=262144
-          sysctl -w vm.max_map_count=262144
+          sudo swapoff -a
+          sudo sysctl -w vm.swappiness=1
+          sudo sysctl -w fs.file-max=262144
+          sudo sysctl -w vm.max_map_count=262144
 
       - uses: getong/elasticsearch-action@v1.2
         with:
