--- a/.github/workflows/fullstack.yml
+++ b/.github/workflows/fullstack.yml
@@ -31,7 +31,10 @@ jobs:
       elastic:
         image: elasticsearch:7.9.2
         ports:
-          - 9200:9200
+          - "9200:9200"
+          - "9300:9300"
+        env:
+          - "discovery.type=single-node"
 #        options: --health-cmd="curl --silent --fail localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=6
       fpm:
         image: ${{ matrix.php.fpm-image }}
@@ -68,22 +71,6 @@ jobs:
           cp m2-composer-templates/2.4.0-composer.lock magento/composer.lock
           ls -la
 
-      - name: Configure sysctl limits
-        run: |
-          sudo swapoff -a
-          sudo sysctl -w vm.swappiness=1
-          sudo sysctl -w fs.file-max=262144
-          sudo sysctl -w vm.max_map_count=262144
-
-      - uses: getong/elasticsearch-action@v1.2
-        with:
-          elasticsearch version: '7.6.1'
-          host port: 9200
-          container port: 9200
-          host node port: 9300
-          node port: 9300
-          discovery type: 'single-node'
-
       - name: Cache Composer Downloads
         uses: actions/cache@v1
         with:
@@ -117,7 +104,7 @@ jobs:
           php -v
           php ./bin/magento --version
           php ./bin/magento list
-          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password --search-engine=elasticsearch7 --elasticsearch-host=localhost --elasticsearch-port=9200 --elasticsearch-username=elastic --elasticsearch-password=changeme
+          ./bin/magento setup:install --db-host mysql --db-user root --db-password password --base-url http://nginx/ --admin-firstname Nia --admin-lastname Admin --admin-email test@example.com --admin-user nia-admin --admin-password nia-1-placeholder-password --search-engine=elasticsearch7 --elasticsearch-host=elastic --elasticsearch-port=9200 --elasticsearch-username=elastic --elasticsearch-password=changeme
       - name: FS check
         run: |
           ls -la
